src/test/ui/issues/issue-34171.stderr
error: compilation successful
  --> $DIR/issue-34171.rs:19:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | |     apply_null!(#[cfg(all())] fn f() {});
LL | | }
   | |_^

error: aborting due to previous error

